fixed the gradle check errors and changed the version of the fermat-pip-api